# Mad-House

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  simulation
Input_handler/: Input_handler.cpp  Input_handler.h
Kids/: Angry_kid.cpp  Angry_kid.h  Coward_kid.cpp  Coward_kid.h  Kid.cpp  Kid.h  Peaceful_kid.cpp  Peaceful_kid.h
Mad_house/: Mad_house.cpp  Mad_house.h
Map_handler/: Map_handler.cpp  Map_handler.h
Types/: Hit_type.h  Impact_type.h  Kid_type.h
